k8s/overlays/prod/patches/frontend-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30081
